Leasing books done by title, not index
There is no method to lease book which would take index as parameter.
Index are not hard-coded into the process of leasing books.
There's a method to lease books which accepts book's title as parameter.